hexagon mobile and selection fixed

--- a/src/components/contentcomponent/contentcomponent.scss
+++ b/src/components/contentcomponent/contentcomponent.scss
@@ -60,7 +60,7 @@
     user-select: none;
 
     p {
-        margin: 0px 5px 0px 50px;
+        margin: 0px 5px 0px 15px;
         //width: calc(100% - ($baseline*5));
         text-align: start;
         user-select: text;
@@ -68,6 +68,7 @@
 
     input[type="radio"] {
 
+        opacity: 0;
         appearance: none;
         @include hexagonButton;
 
@@ -78,18 +79,8 @@
 
     }
 
-    input[type="radio"]:checked {
-
-        background-color: rgb(90, 90, 182);
-
-        &::before {
-            border-bottom: 7.5px solid rgb(90, 90, 182);
-        }
-
-        &::after {
-            border-top: 7.5px solid rgb(90, 90, 182);
-        }
-
+    &:has(input[type="radio"]:checked) {
+        background-color: rgb(255, 255, 255, .16);
     }
 }
 
@@ -119,8 +110,33 @@
             font-size: 1rem;
             line-height: 130%;
             width: 90%;
+            margin: 0px 5px 0px 50px;
             //media query höjd
             //fix här
+        }
+
+        .radio_component {
+            input[type="radio"] {
+        
+                opacity: 1;
+                appearance: none;
+                @include hexagonButton;
+        
+            }
+
+            input[type="radio"]:checked {
+
+                background-color: rgb(90, 90, 182);
+        
+                &::before {
+                    border-bottom: 7.5px solid rgb(90, 90, 182);
+                }
+        
+                &::after {
+                    border-top: 7.5px solid rgb(90, 90, 182);
+                }
+        
+            }
         }
     }
 
@@ -154,6 +170,16 @@
             line-height: 150%;
             //media query höjd
             //fix här
+        }
+
+        .radio_component {
+            input[type="radio"] {
+        
+                opacity: 1;
+                appearance: none;
+                @include hexagonButton;
+        
+            }
         }
     }
 
